--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,9 +32,9 @@ body {
   }
   .sprite-box {
     width: 500px;
-    /* min-width: 500px; */
-    min-height: 500px;
-    height: fit-content;
+    /* min-width: 500px;
+    min-height: 500px; */
+    height: 500px;
     margin:5px auto;
     
   }
@@ -78,6 +78,6 @@ body {
 
 @media only screen and (max-width:499px) {
   :root{
-    --pixel-size: 4;
+    --pixel-size: 3;
   }
 }
