--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,44 +1,36 @@
 body {
-    padding-bottom: 90px;
-  }
-  
-  .nes-progress {
-    height: 25px;
-  }
-  .gamedisp {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-  }
-  .name-input {
-    margin-bottom: 50px;
-    display: flex;
-    justify-content: center;
-    width: 100%;
-  }
+  padding-bottom: 90px;
+}
 
-  .stat-box {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-  }
-  .speech-bubble {
-    width: 400px;
-    height: 140px;
-  }
-  .stat-bar {
-    width: 270px;
-  }
-  .sprite-box {
-    width: 500px;
-    /* min-width: 500px;
+h1 {
+  color: rgb(246, 4, 4);
+}
+
+.nes-progress {
+  height: 25px;
+}
+
+.gamedisp {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.sprite-box {
+  width: 500px;
+  /* min-width: 500px;
     min-height: 500px; */
-    height: 500px;
-    margin:5px auto;
-    
-  }
-  
+  height: 500px;
+  margin: 5px auto;
+
+}
+
+#header {
+  margin-top: .8rem;
+}
+
 .moving {
 
   animation: move 24s linear infinite;
@@ -46,38 +38,44 @@ body {
 }
 
 @keyframes move {
-  0%{left:0px;
-    top:0px;
-    }
-  25%{left:300px;
-    top:0px;
-    }
-  50%{
-    left:300px;
+  0% {
+    left: 0px;
+    top: 0px;
+  }
+
+  25% {
+    left: 300px;
+    top: 0px;
+  }
+
+  50% {
+    left: 300px;
     top: 300px;
   }
-  75%{
-    left:0px;
-    top:300px;
+
+  75% {
+    left: 0px;
+    top: 300px;
   }
-  100%{
-    left:0px;
-    top:0px;
+
+  100% {
+    left: 0px;
+    top: 0px;
   }
-  
+
 }
 
-.uiBtn{
+.uiBtn {
   min-width: 80px;
-  margin:2px auto;
+  margin: 2px auto;
 }
 
-.brown{
-  color:#8c5e3c
+.brown {
+  color: #8c5e3c
 }
 
 @media only screen and (max-width:499px) {
-  :root{
+  :root {
     --pixel-size: 3;
   }
 }
